--- a/client/python/pyproject.toml
+++ b/client/python/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
 
 [project]
 name = "openlineage-python"
-version = "1.34.1"
+version = "version = "1.34.1""
 description = "OpenLineage Python Client"
 readme = "README.md"
 keywords = [
@@ -39,7 +39,7 @@ optional-dependencies.msk-iam = [
   "confluent-kafka>=2.1.1",
 ]
 optional-dependencies.datazone = [
-  "boto3>=1.34.134"
+  "boto3>=version = "1.34.1"34"
 ]
 optional-dependencies.test = [
   "covdefaults>=2.3",
